Add admin AI config panel, update Java & Vaadin, minor fixes & improvements (#22)
* Update TODO.md

* Add AI configuration table and seed data for default settings

* Implement dynamic AI configuration management

* Add AdminConfigView for runtime AI configuration management

* Add unit tests for AiConfigService, covering CRUD operations, validation, and caching

* Add "Configuration" tab to AdminNavigationTabs

* Add JVM arguments to quarkus-maven-plugin configuration for module accessibility

* Update base image to Eclipse Temurin 25 and add JVM argument for module accessibility

* Update binary bundles for development and production environments

* Update JDK version to 25 in Makefile, pom.xml, and check.sh

* Update JDK version to 25 in CI/CD workflows and GitLab CI configuration

* Update changelog

* Bump version to 2.0.0-SNAPSHOT and adjust related configurations for Docker, Maven and scripts

* Update docs and README.md

* Refactor AI configuration in application.properties and docker-compose.yml to streamline API key management

* Fix Makefile typo

* Update database configuration in application.properties for dev services

* Use isBlank() instead of trim().isEmpty()

* Rewrite various service tests

* Refactor GeminiAiService to GeminiService

* Add changelog for version 2.1.0

* Add JVM argument to enable dynamic agent loading in Quarkus configuration

---------

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>