@@ -136,7 +136,7 @@ public class AdminUserGroupsView extends VerticalLayout implements BeforeEnterOb
     private HorizontalLayout createSearchLayout() {
         final var searchLayout = new SearchLayout(
                 e -> {
-                    if (e.getValue() == null || e.getValue().trim().isEmpty()) {
+                    if (e.getValue() == null || e.getValue().isBlank()) {
                         this.loadGroupsAsync();
                     }
                 },
@@ -225,7 +225,7 @@ public class AdminUserGroupsView extends VerticalLayout implements BeforeEnterOb
 
         // Bind fields
         this.binder.forField(nameField)
-                .withValidator(value -> value != null && !value.trim().isEmpty(), "Name is required")
+                .withValidator(value -> value != null && !value.isBlank(), "Name is required")
                 .bind(group1 -> group1.name, (group1, value) -> group1.name = value);
 
         form.add(nameField);
@@ -300,7 +300,7 @@ public class AdminUserGroupsView extends VerticalLayout implements BeforeEnterOb
 
     private void searchGroups() {
         final String query = this.searchField.getValue();
-        if (query == null || query.trim().isEmpty()) {
+        if (query == null || query.isBlank()) {
             this.loadGroupsAsync();
             return;
         }
